--- a/frontend/src/navigation/navbar.module.css
+++ b/frontend/src/navigation/navbar.module.css
@@ -1,10 +1,11 @@
 .navbar {
     border: 3px double dodgerblue;
-    width: 5vh;
+    width: 40px;
     height: 100vh;
     position: fixed;
     z-index: 1;
     top: 0;
+    background-color: aquamarine;
 }
 
 .navbar a {
@@ -12,4 +13,8 @@
     transform: scale(-1);
     padding: 4px 4px 4px 4px;
     margin-bottom: 80%;
+}
+
+.navbar a i {
+    transform: scale(-1);
 }
